--- a/CPP_00/ex00/Makefile
+++ b/CPP_00/ex00/Makefile
@@ -14,7 +14,7 @@ NAME =		megaphone
 
 CC =		c++
 
-CFLAGS =	-Wall -Wextra -Werror
+CFLAGS =	-Wall -Wextra -Werror -std=c++98
 
 SRC =		megaphone.cpp 
 
@@ -25,4 +25,4 @@ all: $(NAME)
 clean:
 	rm -f $(NAME)
 
-re: fclean $(NAME)
+re: clean $(NAME)
