--- a/CPP_00/ex01/Makefile
+++ b/CPP_00/ex01/Makefile
@@ -1,3 +1,14 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: gbricot <marvin@42.fr>                     +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2023/09/21 16:05:01 by gbricot           #+#    #+#              #
+#    Updated: 2023/09/21 16:05:05 by gbricot          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 NAME =		phone_book
 
