added -std=c++98 for all Makefiles and check

--- a/CPP_01/ex04/Makefile
+++ b/CPP_01/ex04/Makefile
@@ -5,33 +5,30 @@
 #                                                     +:+ +:+         +:+      #
 #    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/09/25 10:44:02 by gbricot           #+#    #+#              #
-#    Updated: 2023/09/28 12:58:42 by gbricot          ###   ########.fr        #
+#    Created: 2023/09/28 12:56:22 by gbricot           #+#    #+#              #
+#    Updated: 2023/09/28 13:01:53 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME =		Unnecessary_violence
+NAME =		Sed_is_for_losers
+
+CC = g++
 
 CPPFLAGS =	-Wall -Wextra -Werror -std=c++98
 
-CC =		g++
-
-SRC =		main.cpp\
-			Weapon.cpp\
-			HumanB.cpp\
-			HumanA.cpp
+SRC =		main.cpp \
 
 OBJ =		$(SRC:.cpp=.o)
 
-$(NAME):	$(OBJ)
-			$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+$(NAME): $(OBJ)
+		$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 
-all:		$(NAME)
+all:	$(NAME)
 
 clean:
-			@rm -f $(OBJ)
+		rm -f $(OBJ)
 
-fclean:		clean
-			@rm -f $(NAME)
+fclean	clean
+		rm -f $(NAME)
 
-re:			fclean $(NAME)
+re: fclean $(NAME)
