--- a/CPP_01/ex02/Makefile
+++ b/CPP_01/ex02/Makefile
@@ -3,16 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: gbricot <marvin@42.fr>                     +#+  +:+       +#+         #
+#    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/24 16:46:22 by gbricot           #+#    #+#              #
-#    Updated: 2023/09/24 17:27:28 by gbricot          ###   ########.fr        #
+#    Updated: 2023/09/28 12:58:37 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME =		HI_THIS_IS_BRAIN
 
-CPPFLAGS =	-Wall -Wextra -Werror
+CPPFLAGS =	-Wall -Wextra -Werror -std=c++98
 
 CC =		g++
 
