shit not working

--- a/CPP_02/ex01/Makefile
+++ b/CPP_02/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/02 15:05:45 by gbricot           #+#    #+#              #
-#    Updated: 2023/10/02 15:06:25 by gbricot          ###   ########.fr        #
+#    Updated: 2023/10/03 14:53:44 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,13 +23,16 @@ OBJ =		$(SRC:.cpp=.o)
 
 $(NAME):	$(OBJ)
 			$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+			@echo "[$(NAME)] successfully compilated"
 
 all:		$(NAME)
 
 clean:
+			@echo "Objects files deleted"
 			@rm -f $(OBJ)
 
 fclean:		clean
+			@echo "Program deleted"
 			@rm -f $(NAME)
 
 re:			fclean $(NAME)
