--- a/CPP_02/ex00/Makefile
+++ b/CPP_02/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/01 15:06:52 by gbricot           #+#    #+#              #
-#    Updated: 2023/10/02 13:10:12 by gbricot          ###   ########.fr        #
+#    Updated: 2023/10/10 17:52:23 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,15 +21,23 @@ SRC =		main.cpp\
 
 OBJ =		$(SRC:.cpp=.o)
 
+BLUE = "\033[0;36m"
+WHITE = "\033[0;37m"
+RED = "\033[0;31m"
+GREEN = "\033[0;32m"
+
 $(NAME):	$(OBJ)
-			$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+			$(CC)  $(CPPFLAGS) $(OBJ) -o $(NAME)
+			@echo $(GREEN)[$(NAME)] successfully compilated$(WHITE)
 
 all:		$(NAME)
 
 clean:
+			@echo $(RED)Objects files deleted$(WHITE)
 			@rm -f $(OBJ)
 
 fclean:		clean
+			@echo $(RED)Program deleted$(WHITE)
 			@rm -f $(NAME)
 
 re:			fclean $(NAME)
