--- a/CPP_04/ex02/Makefile
+++ b/CPP_04/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/27 15:05:05 by gbricot           #+#    #+#              #
-#    Updated: 2023/10/27 15:05:20 by gbricot          ###   ########.fr        #
+#    Updated: 2023/10/27 17:11:42 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,6 +34,8 @@ GREEN = "\033[0;32m"
 TOTAL = $(words $(SRC))
 COUNT = 0
 
+ERROR_LOG = /tmp/error_log.txt
+
 define colorecho
 	@tput civis
 	@echo -n $(1) "     ["
@@ -50,8 +52,8 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	@$(call colorecho, $(GREEN)Compiling program :  )
-	@$(CC) $(CPPFLAGS) $^ -o $@ 2>/dev/null
-	@echo $(GREEN)[$(NAME)] Successfully compilated !$(WHITE)
+	@$(CC) $(CPPFLAGS) $^ -o $@ 2>$(ERROR_LOG) || (cat $(ERROR_LOG) && rm -f $(ERROR_LOG) && exit 1)
+	@echo $(GREEN)[$(NAME)] Successfully compiled !$(WHITE)
 
 %.o: %.cpp
 	$(eval COUNT=$(shell echo $$(($(COUNT)+1))))
@@ -64,7 +66,8 @@ $(NAME): $(OBJ)
 		echo -n "-"; \
 	done
 	@echo -n "] $(shell echo $$(($(COUNT) * 100 / $(TOTAL))))%    "
-	@$(CC) $(CPPFLAGS) -c $< -o $@ 2>/dev/null && echo -n "\r"
+	@$(CC) $(CPPFLAGS) -c $< -o $@ 2>$(ERROR_LOG) || (cat $(ERROR_LOG) && rm -f $(ERROR_LOG) && exit 1)
+	@echo -n "\r"
 
 regular:
 		@$(CC) $(CPPFLAGS) $(SRC) -o $(NAME)
