--- a/CPP_05/ex03/Makefile
+++ b/CPP_05/ex03/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Bureaucrat
+NAME = Intern
 
 CC = g++
 
