Added nan, nanf, -inff, +inff, -inf, +inf and precision depending in the input point number with the CountPrecision function

--- a/CPP_06/ex00/Makefile
+++ b/CPP_06/ex00/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Converter
+NAME = convert
 
 CC = g++
 
