--- a/CPP_09/ex00/Makefile
+++ b/CPP_09/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/01 11:57:29 by gbricot           #+#    #+#              #
-#    Updated: 2024/03/04 11:48:38 by gbricot          ###   ########.fr        #
+#    Updated: 2024/03/19 11:45:18 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,11 +16,16 @@ CC = c++
 
 CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 -Wshadow -Wno-unused
 
+SRC_DIR = ./
 SRC =		main.cpp \
 			BitcoinExchange.cpp \
 			Date.cpp
 
-OBJ = $(SRC:.cpp=.o)
+OBJ_DIR = ./obj
+OBJ = $(addprefix $(OBJ_DIR)/,$(SRC:.cpp=.o))
+
+###
+###			Just for visuals effects
 
 BLUE = "\033[0;36m"
 WHITE = "\033[0;37m"
@@ -29,8 +34,6 @@ GREEN = "\033[0;32m"
 
 TOTAL = $(words $(SRC))
 COUNT = 0
-
-ERROR_LOG = /tmp/error_log.txt
 
 define colorecho
 	@tput civis
@@ -43,15 +46,17 @@ define colorecho
 	@tput cnorm
 endef
 
+###
+###
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
+$(NAME): $(OBJ_DIR) $(OBJ)
 	@$(call colorecho, $(GREEN)Compiling program :  )
-	@$(CC) $(CPPFLAGS) $^ -o $@ 2>/dev/null
+	@$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
 	@echo $(GREEN)[$(NAME)] Successfully compilated !$(WHITE)
 
-%.o: %.cpp
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
 	$(eval COUNT=$(shell echo $$(($(COUNT)+1))))
 	@echo -n "Compiling objects files: "
 	@echo -n "["
@@ -63,18 +68,21 @@ $(NAME): $(OBJ)
 		echo -n "-"; \
 	done
 	@echo -n "] $(shell echo $$(($(COUNT) * 100 / $(TOTAL))))%    "
-	@$(CC) $(CPPFLAGS) -c $< -o $@ 2>$(ERROR_LOG) || (cat $(ERROR_LOG) && rm -f $(ERROR_LOG) && exit 1)
+	@$(CC) $(CPPFLAGS) -c $< -o $@
 	@echo -n "\r"
 
 regular:
-	@$(CC) $(CPPFLAGS) $(SRC) -o $(NAME)
+	@$(CC) $(CPPFLAGS) $(SRC_DIR)/$(SRC) -o $(NAME)
+
+$(OBJ_DIR):
+	@mkdir -p $(OBJ_DIR)
 
 clean:
+	@rm -rf $(OBJ_DIR)
 	@echo $(RED)Objects files deleted$(WHITE)
-	@rm -f $(OBJ)
 
 fclean: clean
-	@echo $(RED)Program deleted$(WHITE)
 	@rm -f $(NAME)
+	@echo $(RED)Program deleted$(WHITE)
 
 re: fclean all
