ex03 rework, the logic is now better, without setters

--- a/CPP_03/ex03/Makefile
+++ b/CPP_03/ex03/Makefile
@@ -6,41 +6,87 @@
 #    By: gbricot <gbricot@student.42perpignan.fr    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/16 11:22:08 by gbricot           #+#    #+#              #
-#    Updated: 2023/10/19 11:12:48 by gbricot          ###   ########.fr        #
+#    Updated: 2024/03/21 11:08:24 by gbricot          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME =		Diamond_Trap
 
-CC =		c++
+CC = c++
 
-CPPFLAGS =	-Wall -Wextra -Werror -std=c++98 -Wshadow
+CPPFLAGS = -Wall -Wextra -Werror -g -std=c++98 -Wshadow -Wno-unused
 
-SRC =		main.cpp \
-			ClapTrap.cpp \
-			ScavTrap.cpp \
+SRC_DIR = ./
+SRC =		DiamondTrap.cpp \
 			FragTrap.cpp \
-			DiamondTrap.cpp
+			ScavTrap.cpp \
+			ClapTrap.cpp \
+			main.cpp
 
-OBJ =		$(SRC:.cpp=.o)
+OBJ_DIR = ./obj
+OBJ = $(addprefix $(OBJ_DIR)/,$(SRC:.cpp=.o))
+
+###
+###			Just for visuals effects
 
 BLUE = "\033[0;36m"
 WHITE = "\033[0;37m"
 RED = "\033[0;31m"
 GREEN = "\033[0;32m"
 
-$(NAME):	$(OBJ)
-			$(CC)  $(CPPFLAGS) $(OBJ) -o $(NAME)
-			@echo $(GREEN)[$(NAME)] successfully compilated$(WHITE)
+TOTAL = $(words $(SRC))
+COUNT = 0
 
-all:		$(NAME)
+define colorecho
+	@tput civis
+	@echo -n $(1) "     ["
+	@for i in `seq 1 $(TOTAL)`; do \
+		echo -n "▓"; \
+		sleep 0.05; \
+	done
+	echo -n "]"; echo " 100%";
+	@tput cnorm
+endef
+
+###
+###
+
+all: $(NAME)
+
+$(NAME): $(OBJ_DIR) $(OBJ)
+	@$(call colorecho, $(GREEN)Compiling program :  )
+	@$(CC) $(CPPFLAGS) $(OBJ) -o $(NAME)
+	@echo $(GREEN)[$(NAME)] Successfully compilated !$(WHITE)
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+	$(eval COUNT=$(shell echo $$(($(COUNT)+1))))
+	@echo -n "Compiling objects files: "
+	@echo -n "["
+	
+	@for i in `seq 1 $(shell echo $$(($(COUNT) * $(TOTAL) / $(TOTAL))))`; do \
+		echo -n "▓"; \
+	done
+	@for i in `seq 1 $$(($(TOTAL) - $(COUNT) * $(TOTAL) / $(TOTAL)))`; do \
+		echo -n "-"; \
+	done
+	@echo -n "] $(shell echo $$(($(COUNT) * 100 / $(TOTAL))))%    "
+	@$(CC) $(CPPFLAGS) -c $< -o $@
+	@echo -n "\r"
+
+regular:
+	@$(CC) $(CPPFLAGS) $(SRC_DIR)/$(SRC) -o $(NAME)
+
+$(OBJ_DIR):
+	@mkdir -p $(OBJ_DIR)
 
 clean:
-			@echo $(RED)Objects files deleted$(WHITE)
-			@rm -f $(OBJ)
+	@rm -rf $(OBJ_DIR)
+	@echo $(RED)Objects files deleted$(WHITE)
 
-fclean:		clean
-			@echo $(RED)Program deleted$(WHITE)
-			@rm -f $(NAME)
+fclean: clean
+	@rm -f $(NAME)
+	@echo $(RED)Program deleted$(WHITE)
 
-re:			fclean $(NAME)
+re: fclean all
+
+
